⚙️ Fixed mobile version and signature overflow

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ button.primary {
 }
 
 section {
-    @media (min-width: 480px) {
+    @media (min-width: 768px) {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
@@ -112,21 +112,24 @@ select {
     }
 }
 
-#signature_container {
+section div:nth-child(2) {
     display: flex;
-    justify-content: center;
+    justify-content: center; align-items: center;
+}
+
+#signature_container {
+    overflow-x: scroll;
+    width: fit-content; max-width: 100%;
+    border-radius: 1rem;
+    background-color: #fff;
     @media screen and (max-width: 768px) {
-        align-items: start;
         margin-top: 2rem;
-    }   
-    @media screen and (min-width: 768px) {
-        align-items: center;
     }
 }
 
 #signature {
-    background-color: #fff;
-    padding: 2rem;
+    padding: 1rem;
+    width: max-content;
 }
 
 footer {
